Sugati/src/objects/Contract_Terms_and_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Language__c</fullName>
        <label>Contract Language</label>
        <referenceTo>Contract_Language__c</referenceTo>
        <relationshipLabel>Contract Terms and Conditions</relationshipLabel>
        <relationshipName>Contract_Terms_and_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract Terms and Condition</label>
    <nameField>
        <label>Reference No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Terms and Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>